# public-skills

./: PUBLIC_EXPORT.json  README.md
candidates/: suzan-galluzzo-public-allowed-candidates.json
manifest/: suzan-galluzzo.json
overrides/deep-build/: SKILL.md
overrides/deep-clean/: SKILL.md
overrides/deep-sweep/: SKILL.md
overrides/dev-workflow/: SKILL.md
overrides/goal-post/: SKILL.md
overrides/verify/: SKILL.md
policy/: public-allowed-skill-review.md  public-skill-allowlist.txt
reviews/: suzan-galluzzo-2026-06-01-approved-subset.md
scripts/: export-public-skills.mjs  verify-public-skills.mjs
skills/ab-test-setup/: SKILL.md
skills/ad-creative/: SKILL.md
skills/adcrate-cold-audience/: SKILL.md
skills/advanced-evaluation/: SKILL.md
skills/after-action-review/: SKILL.md
skills/agent-browser/: SKILL.md
skills/agent-md-refactor/: SKILL.md
skills/ai-seo/: SKILL.md
skills/ai-video-scroll-animation/: SKILL.md
skills/airtable-kanban-work-tracker/: SKILL.md
skills/algorithmic-art/: SKILL.md
skills/analytics-tracking/: SKILL.md
skills/anthropic-academy-course-completion/: SKILL.md
skills/autoreason/: SKILL.md
skills/autoresearch/: SKILL.md
skills/backend-agent/: SKILL.md
skills/banner-design/: SKILL.md
skills/blog-cover-generator/: README.md  SKILL.md
skills/brand-alchemy/: README.md  SKILL.md
skills/brand-book-generator/: SKILL.md
skills/dlna/: SKILL.md  pyproject.toml  requirements.txt
skills/dlna/scripts/: setup.sh
skills/dlna/src/dlna/: __init__.py  cli.py  config.py  discover.py  player.py  server.py
(+1023 files in other folders)
