[project]
name = "dlna"
version = "0.1.0"
description = "DLNA Media Renderer control library and CLI"
readme = "SKILL.md"
requires-python = ">=3.10"
dependencies = [
    "async-upnp-client>=0.46.0",
    "aiohttp>=3.8.0",
    "click>=8.0.0",
]

[project.scripts]
dlna = "dlna.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dlna"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
